--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,9 @@ activity = "1.10.1"
 constraintlayout = "2.2.1"
 retrofit = "2.10.0"
 lifecycleRuntimeAndroid = "2.9.1"
+monitor = "1.8.0"
+junitKtx = "1.3.0"
+zoomvideosdkCore = "2.3.5"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -25,6 +28,9 @@ androidx-activity = { group = "androidx.activity", name = "activity", version.re
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 androidx-lifecycle-runtime-android = { group = "androidx.lifecycle", name = "lifecycle-runtime-android", version.ref = "lifecycleRuntimeAndroid" }
+androidx-monitor = { group = "androidx.test", name = "monitor", version.ref = "monitor" }
+androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "junitKtx" }
+zoomvideosdk-core = { module = "us.zoom.videosdk:zoomvideosdk-core", version.ref = "zoomvideosdkCore" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
